internal/fixtures/architecture/negative/ui-raw-network/packages/ui/src/bad.tsx
export async function ForbiddenRequest() {
  return fetch("/api/v1/work");
}
